Include no_gather recipe

--- a/inst/templates/Makefile
+++ b/inst/templates/Makefile
@@ -44,6 +44,13 @@ all: $(GATHERED) $(COOKED) $(ANALYZED) $(PRESENTED)
 ##==================================================
 
 #///////////////////////////////////////////////////
+## O N L Y  C O O K
+no_gather: $(COOKED) $(ANALYZED) $(PRESENTED)
+
+## End no_gather
+##==================================================
+
+#///////////////////////////////////////////////////
 ## G A T H E R
 $(GATHERED_DIR)%.rda:$(GATHER_DIR)%.sql
 	@echo =============================================
