--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,11 @@
 
 export(Analyze)
 export(Cook)
+export(DescribeObjects)
 export(Gather)
 export(GetSQL)
+export(LoadInput)
 export(Make)
+export(NamesToObjects)
 export(NewResearch)
 export(Present)
