--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,10 @@ Version: 0.1.1
 Description: represtools automates creation of analysis directory structure. There are Rmd skeletons which encapsulate typical analytic workflow steps.
 Depends:
     R (>= 3.2.0)
-License: GPL (>= 3)
+License: GPL (>=3)
 LazyData: true
+Imports:
+  whisker
 Suggests:
     testthat,
     Lahman,
