--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,12 @@ export(Analyze)
 export(Cook)
 export(DescribeObjects)
 export(Gather)
+export(GatherObjects)
 export(GetSQL)
 export(LoadInput)
 export(Make)
 export(NamesToObjects)
 export(NewResearch)
+export(OutputFile)
 export(Present)
 importFrom(whisker,whisker.render)
