Add RStudio add-in

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,10 @@ Depends:
 License: GPL (>=3)
 LazyData: true
 Imports:
-  whisker
+  whisker,
+  shiny (>= 0.13),
+  miniUI (>= 0.1.1),
+  rstudioapi (>= 0.5)
 Suggests:
     testthat,
     Lahman,
