--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,4 +12,8 @@ export(NamesToObjects)
 export(NewResearch)
 export(OutputFile)
 export(Present)
+export(rrtAddin)
+import(miniUI)
+import(rstudioapi)
+import(shiny)
 importFrom(whisker,whisker.render)
