Rename GatherObjects -> ListObjects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,8 @@ export(Analyze)
 export(Cook)
 export(DescribeObjects)
 export(Gather)
-export(GatherObjects)
 export(GetSQL)
+export(ListObjects)
 export(LoadObjects)
 export(Make)
 export(NamesToObjects)
