--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,9 @@ Package: represtools
 Title: Automates basic analytic workflow
 Authors@R: person("Brian", "Fannin", email = "FanninQED@eYahoo.com", role = c("aut", "cre"))
 Version: 0.1.1
-Description: represtools automates creation of analysis directory structure. There are Rmd skeletons which encapsulate typical analytic workflow steps.
+Description: This package automates creation of analysis directory structure. There are Rmd skeletons
+  which encapsulate typical analytic workflow steps. Functions will create approprite modules which may
+  pass data from one step to another.
 Depends:
     R (>= 3.2.0)
 License: GPL (>=3)
@@ -12,5 +14,6 @@ Imports:
   whisker
 Suggests:
     testthat,
-    knitr
+    knitr,
+    rmarkdown
 RoxygenNote: 5.0.1
