Fix title and description fields

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,12 @@
 Package: represtools
-Title: Automates basic analytic workflow
-Authors@R: person("Brian", "Fannin", email = "FanninQED@eYahoo.com", role = c("aut", "cre"))
 Version: 0.1.1
-Description: This package automates creation of analysis directory structure. There are Rmd skeletons
-  which encapsulate typical analytic workflow steps. Functions will create approprite modules which may
+Title: Reproducible Research Tools
+Description: Reproducible research tools automates the creation of an analysis directory structure and work flow. There are R markdown
+  skeletons which encapsulate typical analytic work flow steps. Functions will create appropriate modules which may
   pass data from one step to another.
+Authors@R: person("Brian", "Fannin", email = "FanninQED@Yahoo.com", role = c("aut", "cre"))
+Maintainer: Brian Fannin <FanninQED@Yahoo.com>
+BugReports: https://github.com/PirateGrunt/represtools/issues
 Depends:
     R (>= 3.2.0)
 License: GPL (>=3)
