Add codecov and staticdocs build

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,13 @@ r:
   - devel
 sudo: false
 cache: packages
+
+r_github_packages:
+  - jimhester/covr
+  - hadley/staticdocs
+
+after_success:
+  - Rscript -e 'covr::codecov()'
+
+before_deploy:
+  - R -e "staticdocs::build_site(examples = TRUE)"
