--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ r_github_packages:
 
 after_success:
   - Rscript -e 'covr::codecov()'
+  - Rscript -e 'covr::coveralls()'
 
 before_deploy:
   - R -e "staticdocs::build_site(examples = TRUE)"
